--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 /* Your CSS Code here. */
 
 #btn{
-	
+	boder:0px none rgb(255,255,255);
 	background-color:black;
 	color:white;
 	border-radius:5px;
